--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   "author": "Tom Rishworth",
   "license": "BSD-2-Clause",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-libsass": "~0.2.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-jade": "~0.14.0",
-    "grunt-serve": "~0.1.6",
-    "grunt-contrib-connect": "~0.9.0",
-    "bower": "~1.3.12"
+    "grunt": "*",
+    "grunt-sass": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-jade": "*",
+    "grunt-serve": "*",
+    "grunt-contrib-connect": "*",
+    "bower": "*"
   },
   "scripts": {
     "postinstall" : "node_modules/.bin/bower install"
