--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gulp-livereload": "*",
     "gulp-minify-css": "*",
     "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "*"
+    "gulp-sourcemaps": "*",
+    "browser-sync": "^2.11.0"
   },
   "dependencies": {
     "gulp-rename": "^1.2.2",
