--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "bower": "*",
+    "browser-sync": "*",
     "gulp": "*",
     "gulp-autoprefixer": "*",
-    "gulp-compile-handlebars": "^0.6.1",
+    "gulp-compile-handlebars": "*",
     "gulp-concat": "*",
     "gulp-livereload": "*",
     "gulp-minify-css": "*",
-    "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "*",
-    "browser-sync": "^2.11.0"
+    "gulp-sass": "*",
+    "gulp-sass-glob": "*",
+    "gulp-sourcemaps": "*"
   },
   "dependencies": {
-    "gulp-rename": "^1.2.2",
-    "handlebars": "^4.0.5",
-    "handlebars-layouts": "^3.1.3"
+    "gulp-rename": "*",
+    "handlebars": "*",
+    "handlebars-layouts": "*"
   }
 }
