Add sass error handling

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-concat": "*",
     "gulp-livereload": "*",
     "gulp-minify-css": "*",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "*",
     "gulp-sass-glob": "*",
     "gulp-sourcemaps": "*"
